# i2p-rs

./: Cargo.toml
.github/workflows/: sync.yaml
src/: parsers.rs  sam.rs  sam_options.rs  session_watcher.rs
src/net/: datagram.rs  i2p.rs  mod.rs  streaming.rs
tests/: naming_lookup.rs
