[package]
name = "i2p"
version = "0.1.1"
authors = ["Jack Grigg <str4d@i2pmail.org>"]
description = "I2P client library with a std::net-like API"
homepage = "https://github.com/i2p/i2p-rs"
repository = "https://github.com/i2p/i2p-rs"
readme = "README.md"
categories = ["network-programming"]
keywords = ["i2p", "net", "network", "sam"]
license = "MIT"
edition = "2018"

[features]
default = ["public-conn"]
public-conn = []

[badges]
travis-ci = { repository = "i2p/i2p-rs" }

[dependencies]
data-encoding = "2.9.0"
failure = "0.1.8"
failure_derive = "0.1.8"
lazy_static = "1.5.0"
log = "0.4.28"
nom = "8.0.0"
rand = "0.9.2"
serde = "1.0.219"
serde_derive = "1.0.219"
sha2 = "0.10.9"

[dev-dependencies]
env_logger = "0.11.8"
